<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:gravity="center">
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		>
	<TextView
		android:id="@+id/textApSsid"
		android:text="@string/textApSsid"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="12sp"
		android:layout_marginRight="5sp"/>
	<TextView
		android:id="@+id/textNoSsid"
		android:text="@string/textNoSsid"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="12sp"/>
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		>
		<TextView
			android:id="@+id/textApPasswd"
			android:text="@string/textApPasswd"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="5sp"/>
		<EditText
			android:id="@+id/editApPasswd"
			android:layout_width="120px"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="textPassword"
			android:hint="@string/editApPasswdEmpty"/>
		<CheckBox
			android:id="@+id/checkBoxIsPasswdVissible"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:scaleX="0.6"
			android:scaleY="0.6"/>
		</LinearLayout>
	<CheckBox
		android:id="@+id/checkIsSsidHidden"
		android:text="@string/checkIsSsidHidden"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:scaleX="0.6"
		android:scaleY="0.6"
		android:textSize="20sp"
		android:textColor="#d3d3d3"/>
	<Button
		android:id="@+id/buttonSmartConfig"
		android:text="@string/buttonSmartConfig"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="35dp"/>
</LinearLayout>

